Fix invisible button, animation error and border issue on Chrome

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -92,11 +92,17 @@ table, tr, td {
 #right_cell {
   background-color: #FF7012;
   width: 100%;
+  border: 2px solid #FF7012;
+  border-bottom: 0px solid black;
 }
 
 #right_cell > form {
   opacity: 0;
   display:block;
+}
+
+#loginbutton {
+  visibility: hidden;
 }
 
 .slideInUserMenu {
